--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
   <button class="tab" role="tab" data-tab="faq">❓ FAQ</button>
   <button class="tab" role="tab" data-tab="contact">📞 Contact Us</button>
   <button class="tab" role="tab" data-tab="revisions">✏️ Request Revisions</button>
+  <button class="tab" role="tab" data-tab="whyus">⭐ Why Us?</button>
+
 </div>
 
 <!-- Home tab -->
@@ -494,6 +496,58 @@
   </div>
 </section>
 
+<!-- WHY US TAB -->
+<section id="whyusTab" class="tab-content" hidden>
+  <div class="card" style="max-width:1000px;margin:0 auto">
+    <h2>🌟 Why Choose Us?</h2>
+    <p style="color:var(--muted);margin-bottom:18px;">
+      We pride ourselves on delivering high-quality custom 3D prints with fast turnaround and excellent customer care.
+    </p>
+
+    <div class="grid" style="margin-top:12px;">
+      <!-- Fast Turnaround -->
+      <div class="card" style="padding:18px;">
+        <h3>⚡ Fast Turnaround</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          High-speed Bambu Lab A1 technology lets us finish prints in days — not weeks.
+        </p>
+      </div>
+
+      <!-- Pro Quality -->
+      <div class="card" style="padding:18px;">
+        <h3>🎯 Professional Quality</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          Your prints come out sharp, strong, and precise thanks to premium calibration and materials.
+        </p>
+      </div>
+
+      <!-- Communication -->
+      <div class="card" style="padding:18px;">
+        <h3>💬 Easy Communication</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          We stay in touch with updates, revisions, and fast responses to your questions.
+        </p>
+      </div>
+
+      <!-- Safe Shipping -->
+      <div class="card" style="padding:18px;">
+        <h3>📦 Protective Shipping</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          Every print is packaged securely to avoid damage during delivery.
+        </p>
+      </div>
+    </div>
+
+    <div class="card" style="margin-top:22px;padding:18px;background:linear-gradient(135deg, rgba(102,126,234,0.06), rgba(118,75,162,0.06));">
+      <h3>🏆 Our Promise</h3>
+      <p style="color:var(--muted);font-size:0.95rem;">
+        You get reliable results, satisfaction-based revisions, and dedicated support from start to finish.
+      </p>
+    </div>
+  </div>
+</section>
+
+
 <footer>
   © 2025 3D Custom — Bringing Your Ideas to Life |
   <a id="privacyLink" style="color:#fff;text-decoration:underline;cursor:pointer;">Privacy Policy</a>
@@ -785,4 +839,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
