--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <button class="tab" role="tab" data-tab="contact">📞 Contact Us</button>
   <button class="tab" role="tab" data-tab="revisions">✏️ Request Revisions</button>
   <button class="tab" role="tab" data-tab="whyus">⭐ Why Us?</button>
-
+  <button class="tab" role="tab" data-tab="cad">🧩 CAD Services</button>
 </div>
 
 <!-- Home tab -->
@@ -547,6 +547,78 @@
   </div>
 </section>
 
+<!-- CAD SERVICES TAB -->
+<section id="cadTab" class="tab-content" hidden>
+  <div class="card" style="max-width:1000px;margin:0 auto;">
+    <h2>🧩 CAD Design Services</h2>
+    <p style="color:var(--muted);margin-bottom:16px;">
+      Need a custom model created from scratch? Our CAD services turn your ideas into precise, printable 3D designs.
+    </p>
+
+    <div class="grid" style="margin-top:12px;">
+
+      <!-- What We Can Design -->
+      <div class="card" style="padding:18px;">
+        <h3>📐 What We Can Design</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          • Functional parts<br>
+          • Replacement components<br>
+          • Custom gadgets & mounts<br>
+          • Decorative items<br>
+          • Prototypes and mechanisms
+        </p>
+      </div>
+
+      <!-- How It Works -->
+      <div class="card" style="padding:18px;">
+        <h3>⚙️ How It Works</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          1. Send us a sketch, photo, or description.<br>
+          2. We create a first draft model.<br>
+          3. You request any changes.<br>
+          4. Finalized design is delivered as an STL/STEP file.
+        </p>
+      </div>
+
+      <!-- Pricing -->
+      <div class="card" style="padding:18px;">
+        <h3>💲 Pricing</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          CAD pricing varies by complexity:
+          <br><br>
+          • Simple parts: <strong>$5–$15</strong><br>
+          • Medium complexity: <strong>$15–$40</strong><br>
+          • Detailed designs: <strong>$40+</strong><br><br>
+          All quotes include unlimited revisions.
+        </p>
+      </div>
+
+      <!-- What You Receive -->
+      <div class="card" style="padding:18px;">
+        <h3>📤 What You Will Receive</h3>
+        <p style="color:var(--muted);font-size:0.95rem;">
+          • Printable STL file<br>
+          • Optional STEP/OBJ export<br>
+          • Dimensions and tolerances approved by you<br>
+          • Ready-to-print model optimized for your project
+        </p>
+      </div>
+
+    </div>
+
+    <div class="card" style="margin-top:22px;padding:18px;background:linear-gradient(135deg, rgba(102,126,234,0.06), rgba(118,75,162,0.06));">
+      <h3>📩 How to Request CAD Work</h3>
+      <p style="color:var(--muted);font-size:0.95rem;margin-bottom:12px;">
+        Use the contact form in the “Home” tab and select <strong>“CAD Modeling Needed”</strong> in the options.
+      </p>
+      <p style="color:var(--muted);font-size:0.95rem;">
+        Include rough measurements, sketches, or photos — even phone pics work fine!
+      </p>
+    </div>
+  </div>
+</section>
+
+
 
 <footer>
   © 2025 3D Custom — Bringing Your Ideas to Life |
@@ -839,5 +911,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
-
 
